fix threads cpu time graph visible region

--- a/flare-server/static/simpleui/simpleui.css
+++ b/flare-server/static/simpleui/simpleui.css
@@ -44,7 +44,7 @@ p {
 }
 
 #cpu_time_content {
-    width: 1000px;
+    width: 1100px;
     overflow-x: hidden;
     overflow-y: auto;
 }
